Swedish language added

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,1 +1,47 @@
-{}
+{
+    "weather_situation1": "Clear sky",
+    "weather_situation2": "Nearly clear sky",
+    "weather_situation3": "Variable cloudiness",
+    "weather_situation4": "Halfclear sky",
+    "weather_situation5": "Cloudy sky",
+    "weather_situation6": "Overcast",
+    "weather_situation7": "Fog",
+    "weather_situation8": "Light rain showers",
+    "weather_situation9": "Moderate rain showers",
+    "weather_situation10": "Heavy rain showers",
+    "weather_situation11": "Thunderstorm",
+    "weather_situation12": "Light sleet showers",
+    "weather_situation13": "Moderate sleet showers",
+    "weather_situation14": "Heavy sleet showers",
+    "weather_situation15": "Light snow showers",
+    "weather_situation16": "Moderate snow showers",
+    "weather_situation17": "Heavy snow showers",
+    "weather_situation18": "Light rain",
+    "weather_situation19": "Moderate rain",
+    "weather_situation20": "Heavy rain",
+    "weather_situation21": "Thunder",
+    "weather_situation22": "Light sleet",
+    "weather_situation23": "Moderate sleet",
+    "weather_situation24": "Heavy sleet",
+    "weather_situation25": "Light snowfall",
+    "weather_situation26": "Moderate snowfall",
+    "weather_situation27": "Heavy snowfall",
+    "weather_situation": "No value found",
+    "precipitation_situation0": "No precipitation",
+    "precipitation_situation1": "Snow",
+    "precipitation_situation2": "Snow and rain",
+    "precipitation_situation3": "Rain",
+    "precipitation_situation4": "Drizzle",
+    "precipitation_situation5": "Freezing rain",
+    "precipitation_situation6": "Freezing drizzle",
+    "precipitation_situation": "No value found",
+    "direction1": "North",
+    "direction2": "North-West",
+    "direction3": "West",
+    "direction4": "South-West",
+    "direction5": "South",
+    "direction6": "South-East",
+    "direction7": "East",
+    "direction8": "North-East"
+
+}
